minor patch to fix tabs jumping

--- a/css/custom-theme/jquery-ui-1.8.16.custom.css
+++ b/css/custom-theme/jquery-ui-1.8.16.custom.css
@@ -755,7 +755,7 @@ cursor: text;
   
 
  }
-.ui-tabs .ui-tabs-nav li.ui-tabs-selected { margin-bottom: 0; padding-bottom: 1px; }
+.ui-tabs .ui-tabs-nav li.ui-tabs-selected { margin-bottom: 0; padding-bottom: 0px; }
 
 .ui-tabs .ui-tabs-nav li.ui-tabs-selected a, .ui-tabs .ui-tabs-nav li.ui-state-disabled a, .ui-tabs .ui-tabs-nav li.ui-state-processing a { 
   
